--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,10 +1,7 @@
 name: Docker Image CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: 
+  workflow_dispatch:
 
 jobs:
  main:
@@ -21,3 +18,6 @@ jobs:
          push: true
          tags: neugartf/mautrix-telegram:latest
          platforms: linux/arm/v6,linux/arm/v7 
+         registry: ghcr.io
+         username: ${{ github.repository_owner }}
+         password: ${{ secrets.GHCR }}
