--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,7 +2,6 @@ name: Docker Image CI
 
 on: 
   workflow_dispatch:
-
 jobs:
  main:
    runs-on: ubuntu-latest
@@ -10,14 +9,20 @@ jobs:
      -
        name: Setup Docker Buildx
        uses: docker/setup-buildx-action@v1
+     -     
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR }}
      -
        name: Build and push
        id: docker_build
        uses: docker/build-push-action@v2
        with:
          push: true
-         tags: neugartf/mautrix-telegram:latest
-         platforms: linux/arm/v6,linux/arm/v7 
-         registry: ghcr.io
-         username: ${{ github.repository_owner }}
-         password: ${{ secrets.GHCR }}
+         tags: |
+          ghcr.io/neugartf/mautrix-telegram:latest
+          ghcr.io/neugartf/mautrix-telegram:v0.9.0    
+         platforms: linux/arm/v6,linux/arm/v7
