--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
  main:
-   runs-on: ubuntu-latest
+   runs-on: ubuntu-20.04
    steps:
      -
        name: Setup Docker Buildx
