--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
  main:
-   runs-on: macos-10.15
+   runs-on: ubuntu-latest
    steps:
      -
        name: Setup Docker Buildx
